--- a/Prism_POC/Shared/Prism_POC.Core/Prism_POC.Core.csproj
+++ b/Prism_POC/Shared/Prism_POC.Core/Prism_POC.Core.csproj
@@ -5,9 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.5.3.2" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1422" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Prism_POC.Model\Prism_POC.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
